<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/referLottie"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/big_refer_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_below="@id/referLottie"
            android:id="@+id/referPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/big_point" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10"
                    android:fontFamily="@font/big_rubik_medium"
                    android:includeFontPadding="false"
                    android:text="How it works?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReferList"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/point_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/big_point_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_medium"
                        android:includeFontPadding="false"
                        android:text="@string/point_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_regular"
                        android:includeFontPadding="false"
                        android:text="@string/share_your_referral_code"
                        android:textColor="#80000000"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/point_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/dim_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/big_point_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_medium"
                        android:includeFontPadding="false"
                        android:text="@string/point_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_regular"
                        android:includeFontPadding="false"
                        android:text="@string/earn_points"
                        android:textColor="#80000000"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/dim_10"
                android:visibility="gone"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/big_point_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_medium"
                        android:includeFontPadding="false"
                        android:text="@string/point_3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/big_rubik_regular"
                        android:includeFontPadding="false"
                        android:text="@string/unlimited_reward"
                        android:textColor="#80000000"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/referOk"
            android:elevation="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerHorizontal="true"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:background="@drawable/big_refer_bg"
            android:backgroundTint="@color/colorPrimary"
            android:layout_below="@id/referPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="OKAY"
                android:includeFontPadding="false"
                android:fontFamily="@font/big_rubik_semibold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>